@@ -1,5 +1,5 @@
 /*
- * Copyright © 2009-2012 Inria.  All rights reserved.
+ * Copyright © 2009-2013 Inria.  All rights reserved.
  * Copyright © 2012 Université Bordeau 1
  * See COPYING in top-level directory.
  */
@@ -627,6 +627,15 @@ hwloc_backends_reset(struct hwloc_topology *topology)
 {
   hwloc_backends_disable_all(topology);
   if (topology->is_loaded) {
+    static int deprecated_warning = 0;
+    if (!deprecated_warning) {
+      if (!getenv("HWLOC_HIDE_DEPRECATED")) {
+	fprintf(stderr, "*** Modifying an already-loaded topology.\n");
+	fprintf(stderr, "*** This non-documented behavior will not be supported in future releases.\n");
+	fprintf(stderr, "*** Set HWLOC_HIDE_DEPRECATED in the environment to hide this message.\n");
+      }
+      deprecated_warning = 1;
+    }
     hwloc_topology_clear(topology);
     hwloc_distances_destroy(topology);
     hwloc_topology_setup_defaults(topology);
